Rename User Issue buttons & align rows in tooltip
Renamed User Issue buttons to reduce confusion with the Triage buttons.
Added styling & scaffolding so user-issues and pinpoint buttons appear more
aligned.

Tooltip on a no-regression point: https://screenshot.googleplex.com/3qHXLNhf4Ljqn4n
Tooltip on a regression: https://screenshot.googleplex.com/6Nnc6zjUXvkWquM

Please note that aligning nudge & triage buttons in out of scope of this change.

Bug: 492428249
Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/1186457
Commit-Queue: Marcin Mordecki <mordeckimarcin@google.com>

--- a/perf/modules/chart-tooltip-sk/chart-tooltip-sk.scss
+++ b/perf/modules/chart-tooltip-sk/chart-tooltip-sk.scss
@@ -66,6 +66,9 @@ chart-tooltip-sk {
         color: var(--primary);
       }
     }
+    ul.table[hidden] {
+      display: none !important;
+    }
 
     .buttons {
       display: flex;
